# qkernel-telemetry-anomaly

./: .gitignore  CHANGELOG.md  HYPOTHESES.md  QUICKREF.md  README.md  generate_v0.3.1.py  pyproject.toml  requirements.txt
notebooks/: walkthrough.ipynb
src/: __init__.py  baselines.py  eval.py  kernel_alignment.py  kernel_spectrum.py  main.py  mmd.py  quantum_kernel.py  telemetry_sim.py  utils.py
tests/: test_integration.py  test_kernel.py  test_kernel_alignment.py  test_new_features.py  test_v031_modules.py
