[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkernel-telemetry-anomaly"
version = "0.3.1"
description = "Quantum-kernel novelty detection on telemetry-like manifold data"
authors = [
    {name = "Christopher Altman", email = "x@christopheraltman.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pennylane>=0.35.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 120
target-version = "py310"
